<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="16dp"
    android:gravity="center">

    <!-- 升降号选择 -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tuner_accidental"
            android:textSize="12sp"
            android:layout_marginBottom="4dp" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/check_sharp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="♯" />

            <CheckBox
                android:id="@+id/check_flat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="♭" />
        </LinearLayout>


    </LinearLayout>

    <!-- 音名选择器 -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginEnd="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tuner_note_name"
            android:textSize="12sp"
            android:layout_marginBottom="4dp" />

        <NumberPicker
            android:id="@+id/picker_note_name"
            android:layout_width="wrap_content"
            android:layout_height="100dp" />
    </LinearLayout>



    <!-- 八度选择器 -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginStart="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tuner_octave"
            android:textSize="12sp"
            android:layout_marginBottom="4dp" />

        <NumberPicker
            android:id="@+id/picker_octave"
            android:layout_width="wrap_content"
            android:layout_height="100dp" />
    </LinearLayout>
</LinearLayout>
